Closed Bug 64835 Opened 25 years ago Closed 25 years ago

setPackageFolder() causes compareVersion() to fail

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P2)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.8

People

(Reporter: dveditz, Assigned: dveditz)

Details

(Whiteboard: [xpibug])

Attachments

(1 file)

If an install script uses setPackageFolder() at any point the folder will be saved as a file path with the registry info from initInstall() instead of flagged as a directory path. Later when an InstallTrigger.compareVersion() is attempted on that node it will find the file path notation, not find the file and return a -4
Patch causes the package path to be correctly registered as a directory rather than as a file path. Sean, could you review please?
Keywords: nsbeta1, patch
patch looks good. I couldn't find another location in xpinstall which needed the same treatment for VR_Install(). r=ssu
Whiteboard: [xpibug]
Reassigning QA Contact to David.
QA Contact: jimmylee → depstein
Moz 0.8 tasks
Target Milestone: --- → mozilla0.8
Priority: -- → P2
sr=mscott
Fix checked in
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Build: 2001-02-14-09-Mtrunk(WIN), 2001-02-14-09-Mtrunk(MAC), 2001-02-14-08-Mtrunk(LINUX) We now properly register the Directory. http://jimbob/jars/f_setpkgfldr_compareversion.xpi Marking Verified.
Status: RESOLVED → VERIFIED
QA Contact: depstein → jimmylee
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: