bug 64835 r=ssu/sr=mscott: InstallTrigger.compareVersion() returning bad result bug 11682 r=dbragg/sr=mscott: version registry requires UTF8, add missing conversions